--- a/kimsta/templates/temps/insta.html
+++ b/kimsta/templates/temps/insta.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html'%}
+{% extends 'temps/base.html'%}
 {%block content%}
 <div class="contaier">
   
@@ -24,7 +24,7 @@
                <div class="card card-body">
                    <div class="avatar">
                     <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-                    <p class="p-2">{{post_item.user.username}}</p>
+                    <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis, atque odio dignissimos similique inventore nesciunt natus, hic rerum quas neque perspiciatis quasi cumque consequuntur reiciendis error distinctio sunt iste!</p>
                     <i class="bi bi-three-dots"></i>
                    </div>
                    <hr>
@@ -36,8 +36,8 @@
                     <i id="icon" style=" display: flex; justify-content: flex-end;" class="bi bi-bookmark"></i>
                    </div>
                    <h6>1,626 likes</h6>
-                   <p style="font-weight: 600;">{{post_item.caption}}</p>
-                   <p style="font-weight: 600;">#{{tag}}</p>
+                   <p style="font-weight: 600;">caption</p>
+                   <p style="font-weight: 600;">#tag</p>
                    
                    <hr>
                    <div class="comment">
