--- a/kimsta/templates/temps/insta.html
+++ b/kimsta/templates/temps/insta.html
@@ -1,5 +1,73 @@
 {% extends 'temps/base.html'%}
 {%block content%}
+<style>
+    .container{
+    overflow: hidden;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.header-centre > input{
+    border-radius: 10px;
+    border-style: none;
+    background-color: rgb(236, 229, 229);
+    outline: none;
+}
+.header-right{
+    margin-right: 10px;
+}
+#icon{
+    margin-left: 10px;
+    font-size: 15px;
+    cursor: pointer;
+}
+/* .posts{
+    
+    flex: 0.7;
+} */
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    display:flex;
+    align-items: center;
+    margin-left: 3px;
+    border: 2px solid red;
+    cursor: pointer;
+  }
+  .avatar > i{
+    display: flex;
+    color:rgb(0, 81, 255);
+    cursor: pointer;
+    justify-content: flex-end;
+  }
+ .icons{
+    font-size: 20px;
+    cursor: pointer;
+ }
+ #icon:hover{
+     color: rgb(255, 0, 0);
+ }
+ .comment > input{
+     border: none !important;
+     outline: none;
+ }
+ .comment > h6{
+    display: flex;
+    color:rgb(0, 81, 255);
+    cursor: pointer;
+    justify-content: flex-end;
+ }
+ .comment{
+    display: flex;
+    align-items: center
+ }
+</style>
 <div class="contaier">
   
     <hr>
@@ -24,7 +92,7 @@
                <div class="card card-body">
                    <div class="avatar">
                     <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-                    <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis, atque odio dignissimos similique inventore nesciunt natus, hic rerum quas neque perspiciatis quasi cumque consequuntur reiciendis error distinctio sunt iste!</p>
+                    <p class="p-2">parammmm</p>
                     <i class="bi bi-three-dots"></i>
                    </div>
                    <hr>
