--- a/kimsta/templates/temps/insta.html
+++ b/kimsta/templates/temps/insta.html
@@ -91,8 +91,9 @@
             <div class="col-md-9">
                <div class="card card-body">
                    <div class="avatar">
-                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-                    <p class="p-2">parammmm</p>
+                    {% for posts in photo %}
+                    <img src="{{posts.image.url}}" alt="Avatar" class="avatar">
+                    <p class="p-2">{{posts.title}}</p>
                     <i class="bi bi-three-dots"></i>
                    </div>
                    <hr>
@@ -103,9 +104,10 @@
                     <i id="icon" class="bi bi-send"></i>
                     <i id="icon" style=" display: flex; justify-content: flex-end;" class="bi bi-bookmark"></i>
                    </div>
-                   <h6>1,626 likes</h6>
-                   <p style="font-weight: 600;">caption</p>
+                   <h6>{{post.posted}}</h6>
+                   <p style="font-weight: 600;">{{post.caption}}</p>
                    <p style="font-weight: 600;">#tag</p>
+                   {% endfor %}
                    
                    <hr>
                    <div class="comment">
