--- a/kimsta/templates/temps/insta.html
+++ b/kimsta/templates/temps/insta.html
@@ -88,16 +88,17 @@
                 </div>
             </div>
             
-            <div class="col-md-9">
+            <div class="col-md-9 p-3">
+                {% for posts in photo %}
                <div class="card card-body">
                    <div class="avatar">
-                    {% for posts in photo %}
-                    <img src="{{posts.image.url}}" alt="Avatar" class="avatar">
+                    
+                    <img src="https://scontent.fnbo9-1.fna.fbcdn.net/v/t39.30808-6/p720x720/240721816_557953238586864_5850842178903416705_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=e3f864&_nc_eui2=AeHkjYlrZGZ5UBFMTZVn99KSjPVrik0kSpeM9WuKTSRKl4r14nJ2TWHgJLbLe-mzm-4z1kw4uQ7PX1qKhy0IdNLP&_nc_ohc=04loTxhQYIYAX-tAEO0&_nc_pt=5&_nc_zt=23&_nc_ht=scontent.fnbo9-1.fna&oh=77d5b07ace1076fde33247fcdb16ae9c&oe=61B5EBE7" alt="Avatar" class="avatar">
                     <p class="p-2">{{posts.title}}</p>
                     <i class="bi bi-three-dots"></i>
                    </div>
                    <hr>
-                   <img src="https://media.istockphoto.com/photos/flying-autumn-leaves-picture-id1262572653?b=1&k=20&m=1262572653&s=170667a&w=0&h=gDPYPtFysu7SFBKDrxt7xXniv2xC5WhFSlbuxTGT45Q=" alt="">
+                   <img src="{{posts.image.url}}" alt="">
                    <div class="icons p-3">
                     <i id="icon" class="bi bi-heart"></i>
                     <i id="icon" class="bi bi-chat"></i>
@@ -106,8 +107,8 @@
                    </div>
                    <h6>{{post.posted}}</h6>
                    <p style="font-weight: 600;">{{post.caption}}</p>
-                   <p style="font-weight: 600;">#tag</p>
-                   {% endfor %}
+                   <p style="font-weight: 600;"></p>
+                   
                    
                    <hr>
                    <div class="comment">
@@ -116,6 +117,8 @@
                     <h6>post</h6>
                    </div>
                </div> 
+               {% endfor %}
+               <br>
             </div>
             <div class="col-md-3">
                 <div class="card card-body">
