--- a/kimsta/templates/temps/insta.html
+++ b/kimsta/templates/temps/insta.html
@@ -94,7 +94,7 @@
                    <div class="avatar">
                     
                     <img src="https://scontent.fnbo9-1.fna.fbcdn.net/v/t39.30808-6/p720x720/240721816_557953238586864_5850842178903416705_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=e3f864&_nc_eui2=AeHkjYlrZGZ5UBFMTZVn99KSjPVrik0kSpeM9WuKTSRKl4r14nJ2TWHgJLbLe-mzm-4z1kw4uQ7PX1qKhy0IdNLP&_nc_ohc=04loTxhQYIYAX-tAEO0&_nc_pt=5&_nc_zt=23&_nc_ht=scontent.fnbo9-1.fna&oh=77d5b07ace1076fde33247fcdb16ae9c&oe=61B5EBE7" alt="Avatar" class="avatar">
-                    <p class="p-2">{{posts.title}}</p>
+                    <p class="p-2">{{posts.user}}</p>
                     <i class="bi bi-three-dots"></i>
                    </div>
                    <hr>
@@ -105,10 +105,22 @@
                     <i id="icon" class="bi bi-send"></i>
                     <i id="icon" style=" display: flex; justify-content: flex-end;" class="bi bi-bookmark"></i>
                    </div>
-                   <h6>{{post.posted}}</h6>
-                   <p style="font-weight: 600;">{{post.caption}}</p>
+                   <h6>{{posts.post_date}}</h6>
+                   <br>
+                <form class action="{% url 'like-image' %}" method='POST'>
+                    {% csrf_token %}
+                    <input type="hidden" name="image_id" value="{{posts.id}}">
+                    {%if user not in pic.liked.all %}
+                    <button class="btn btn-outline-primary" type="submit"> like </button>
+                    {% else %}
+                    <button class="" type="submit">like</button>
+                    {% endif %}
+                </form>
+                <strong>{{posts.liked.all.count}}Likes</strong>
+                <br>
+                   <p style="font-weight: 600;">{{posts.title}}</p>
                    <p style="font-weight: 600;"></p>
-                   
+                
                    
                    <hr>
                    <div class="comment">
