--- a/kimsta/templates/temps/navbar.html
+++ b/kimsta/templates/temps/navbar.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="header-left">
-        <img class="logo" src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png" alt="insta">
+        <a href="/"><img class="logo" src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png" alt="insta"></a>
     </div>
     <div class="header-centre">
         <input type="text" name="search" placeholder="...search">
